# pdm-dep-updates-experiment

./: .pdm-python  README.md  pyproject.toml  requirements.txt
.github/workflows/: pdm-update-deps-action.yaml
