[project]
name = "pdm-dep-updates-experiment"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "onmete", email = "ondrejmetelka@outlook.com"},
]
dependencies = ["pandas==2.0.0", "fastapi==0.115.10"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
